--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,7 +1,6 @@
 name: Python CI
 
-##Trigger the workflow on nay push to the main branch or pull request
-
+# Trigger the workflow on any push or pull request to main
 on:
   push:
     branches:
@@ -11,28 +10,61 @@ on:
       - main
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
+    steps:
+      # Step 1: Check out the code from repo
+      - name: Check out Code
+        uses: actions/checkout@v3
 
-    Steps:
-    ## Step1 : check out the code from repo
-    - name: Check out Code
-      uses: actions/checkout@v2
+      # Step 2: Set up Python Env
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-    ## Step 2: setup Python Env
-    - name: Set up Python
-    uses: actions/setup-python@v2
-    with:
-      python-version: '3.8'
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    ## step 3: Install dependencies
+      # Step 4: Run tests
+      - name: Run tests
+        run: |
+          export PYTHONPATH=$PYTHONPATH:./src
+          pytest
 
-    - name: Install dependencies
-      run:
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    ## Step 4 rub tests
-    - name: Run tests
-      run: pytest
+  build-and-publish:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+
+    steps:
+      # Step 1: Check out the code
+      - name: Check out Code
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Step 3: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 4: Build and push Docker Image
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
+
+      # Step 5: Print image digest
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
