--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,19 +10,19 @@ on:
       - main
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
       # Step 1: Check out the code from repo
-      - name: Check out code
-        uses: actions/checkout@v2
+      - name: Check out Code
+        uses: actions/checkout@v3
 
-      # Step 2: Set up Python environment
+      # Step 2: Set up Python Env
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.9'
 
       # Step 3: Install dependencies
       - name: Install dependencies
@@ -35,3 +35,36 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:./src
           pytest
+
+  build-and-publish:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+
+    steps:
+      # Step 1: Check out the code
+      - name: Check out Code
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Step 3: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 4: Build and push Docker Image
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
+
+      # Step 5: Print image digest
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
